# ictsc-discord-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bot.sample.yaml  bot.yaml.example  bot.yaml.template  docker-entrypoint.sh  rustfmt.toml
.github/workflows/: build.yml
src/: _bot.rs  bot.rs  config.rs  error.rs  errors.rs  lib.rs  main.rs  models.rs
src/bot/: channels.rs  interactions.rs  mod.rs  permissions.rs  roles.rs
src/bot/commands/: archive.rs  ask.rs  join.rs  mod.rs  ping.rs  recreate.rs  redeploy.rs  sync.rs
src/bot/helpers/: channels.rs  interactions.rs  member.rs  mod.rs  roles.rs
src/commands/: ask.rs  join.rs  mod.rs  ping.rs  recreate.rs  whoami.rs
src/operations/: category_channel.rs  channels.rs  interactions.rs  mod.rs  recreate.rs  roles.rs  text_channel.rs  threads.rs  users.rs  voice_channel.rs
src/services/: contestant.rs  mod.rs  problem.rs  redeploy.rs  regalia.rs  team.rs
src/services/redeploy/: regalia.rs
