[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = { version = "3.0.0-rc.3", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"
serde = "1.0.131"
serde_derive = "1.0.131"
serde_yaml = "0.8.21"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
