[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.52"
base64 = "0.13.0"
clap = { version = "3.0.0-rc.3", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde = "1.0.131"
serde_derive = "1.0.131"
serde_yaml = "0.8.21"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
thiserror = "1.0.30"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
