[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
async-trait = "0.1.52"
base64 = "0.13.0"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.8.4"
clap = { version = "4.4.2", features = ["derive"] }
derive_builder = "0.12.0"
reqwest = { version = "0.11.9", features = ["json"] }
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.108"
serde_yaml = "0.8.21"
serenity = { version = "0.12.2", default-features = false, features = ["client", "collector", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
thiserror = "1.0.30"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
